fix toast z-index

--- a/frontend/src/styles/scss/Toast.module.scss
+++ b/frontend/src/styles/scss/Toast.module.scss
@@ -9,6 +9,8 @@
   padding: (v.$s * 1.5) (v.$s * 3);
   border-radius: 9999px;
   border: 4px solid v.$clrTextGrey;
+  z-index: 1000;
+  pointer-events: none;
 }
 @keyframes fadeOut {
   to {
